--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.jvmargs = -Xmx3G
 
 # Mod Information
 mod_version = 1.0
-maven_group = com.cleanroommc
-archives_base_name = modid
+mod_id = imlib
+maven_group = com.springwater.imlib
+archives_base_name = ImGuiLib
 
 # If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
 
 # Boilerplate Options
-use_mixins = false
-use_coremod = false
+use_mixins = true
+use_coremod = true
 use_assetmover = false
 
 # Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
@@ -19,4 +20,7 @@ use_access_transformer = false
 
 # Coremod Arguments
 include_mod = true
-coremod_plugin_class_name = 
+coremod_plugin_class_name = com.springwater.imlib.EarlyMixinInit
+
+# ImGui
+imgui_version=1.86.10
