--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ minecraft {
     mcpMappingVersion = '39'
     
     // Set username here, the UUID will be looked up automatically
-    username = 'Developer'
+    username = 'MiuxuE'
     
     // Add any additional tweaker classes here
     // extraTweakClasses.add('org.spongepowered.asm.launch.MixinTweaker')
@@ -59,21 +59,16 @@ minecraft {
         args << '-Dmixin.debug.export=true'
     }
     extraRunJvmArguments.addAll(args)
-
-    // Include and use dependencies' Access Transformer files
     useDependencyAccessTransformers = true
-    
-    // Add any properties you want to swap out for a dynamic value at build time here
-    // Any properties here will be added to a class at build time, the name can be configured below
-    // Example:
-    // injectedTags.put('VERSION', project.version)
-    // injectedTags.put('MOD_ID', project.archives_base_name)
+
+    injectedTags.put('VERSION', project.version)
+    injectedTags.put('MOD_ID', project.mod_id)
 }
 
 // Generate a group.archives_base_name.Tags class
 tasks.injectTags.configure {
     // Change Tags class' name here:
-    outputClassName.set("${project.group}.${project.archives_base_name}.Tags")
+    outputClassName.set("${project.group}.Tags")
 }
 
 repositories {
@@ -95,6 +90,11 @@ repositories {
     mavenLocal() // Must be last for caching to work
 }
 
+configurations {
+    implementation.extendsFrom lib
+    api.extendsFrom lib
+}
+
 dependencies {
     if (project.use_assetmover.toBoolean()) {
         implementation 'com.cleanroommc:assetmover:2.5'
@@ -108,7 +108,7 @@ dependencies {
 
     if (project.use_mixins.toBoolean()) {
         // Change your mixin refmap name here:
-        String mixin = modUtils.enableMixins('org.spongepowered:mixin:0.8.3', "mixins.${project.archives_base_name}.refmap.json")
+        String mixin = modUtils.enableMixins('org.spongepowered:mixin:0.8.3', "mixins.${project.mod_id}.refmap.json")
         api (mixin) {
             transitive = false
         }
@@ -119,6 +119,11 @@ dependencies {
             transitive = false
         }
     }
+
+    lib "io.github.spair:imgui-java-binding:${project.imgui_version}"
+    lib "io.github.spair:imgui-java-lwjgl3:${project.imgui_version}"
+
+    lib "io.github.spair:imgui-java-natives-windows:${project.imgui_version}"
 
 }
 
@@ -142,7 +147,9 @@ processResources {
         // Replace version and mcversion
         fcd.expand (
                 'version': project.version,
-                'mcversion': project.minecraft.version
+                'mcversion': project.minecraft.version,
+                'mod_id': project.mod_id,
+                'mod_name': project.archives_base_name,
         )
     }
     
@@ -152,6 +159,13 @@ processResources {
 }
 
 jar {
+    dependsOn configurations.lib
+    from {
+        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+        configurations.lib.collect {
+            zipTree(it)
+        }
+    }
     manifest {
         def attribute_map = [:]
         if (project.use_coremod.toBoolean()) {
