--- a/gradle.properties
+++ b/gradle.properties
@@ -1,26 +1,20 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs = -Xmx3G
-
+org.gradle.jvmargs=-Xmx3G
 # Mod Information
-mod_version = 1.0
-mod_id = imlib
-maven_group = com.springwater.imlib
-archives_base_name = ImGuiLib
-
+mod_version=1.0
+mod_id=imlib
+maven_group=com.springwater.imlib
+archives_base_name=ImGuiLib
 # If any properties changes below this line, run `gradlew setupDecompWorkspace` and refresh gradle again to ensure everything is working correctly.
-
 # Boilerplate Options
-use_mixins = true
-use_coremod = true
-use_assetmover = false
-
+use_mixins=false
+use_coremod=false
+use_assetmover=false
 # Access Transformer files should be in the root of `resources` folder and with the filename formatted as: `{archives_base_name}_at.cfg`
-use_access_transformer = false
-
+use_access_transformer=false
 # Coremod Arguments
-include_mod = true
-coremod_plugin_class_name = com.springwater.imlib.EarlyMixinInit
-
+include_mod=true
+coremod_plugin_class_name=com.springwater.imlib.EarlyMixinInit
 # ImGui
 imgui_version=1.86.10
